...
        android:summary="@string/checkForSafeEntrySummary"
        android:theme="@style/AppTheme"
        android:textColorSecondary="@color/colorWhite"
        android:title="@string/checkForSafeEntryTitle" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/KEYallowNegativeLp"
        android:summary="@string/stopAtZeroSummary"
        android:title="@string/stopAtZeroTitle"
        android:textColorSecondary="@color/colorWhite"/>
    <ListPreference
        android:entries="@array/timerDefaultTimeStrings"
        android:entryValues="@array/timerDefaultTimeIntegers"
...
        android:summary="@string/defaultTimerLengthSummary"
        android:title="@string/defaultTimerLength" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/playerOne"
        android:inputType="textPersonName"
        android:key="@string/KEYplayerOneDefaultNameSetting"
        android:maxLines="1"
        android:maxLength="20"
        android:textColorSecondary="@color/colorWhite"
        android:singleLine="true"
        android:title="@string/playerOneDefaultName"/>
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/playerTwo"
        android:inputType="textPersonName"
        android:key="@string/KEYplayerTwoDefaultNameSetting"
        android:maxLines="1"
        android:maxLength="20"
        android:singleLine="true"
        android:title="@string/playerTwoDefaultName"
        android:textColorSecondary="@color/colorWhite"/>
    <EditTextPreference
        android:defaultValue="8000"
        android:maxLength="7"
        android:inputType="number"
        android:key="@string/KEYdefaultLpSetting"
        android:maxLines="1"
        android:singleLine="true"
        android:title="@string/defaultLifepoints"
        android:textColorSecondary="@color/colorWhite"/>
</PreferenceScreen>
